@@ -1,3 +1,7 @@
+2005-03-16  Lorenzo Gil Sanchez  <lgs@sicem.biz>
+
+	* newsitems.py: added 2.6.1 announcement
+
 2005-03-15  Lorenzo Gil Sanchez  <lgs@sicem.biz>
 
 	* applications.src: added PyMusique, Mapview and pyGPS
